--- a/app/src/main/res/layout/item_search_size.xml
+++ b/app/src/main/res/layout/item_search_size.xml
@@ -14,9 +14,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/search_size_check_box"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:alpha="0.8"
+            android:buttonTint="?colorControlNormal"
+            android:clickable="false"
+            android:enabled="false"
+            android:scaleX="0.7"
+            android:scaleY="0.7" />
+
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/search_size_card_view"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_32sdp"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_12sdp"
             android:layout_marginVertical="@dimen/_2sdp"
             app:cardBackgroundColor="?myCardViewBackground"
@@ -26,14 +40,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    setClothIcon="@{size.name}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginVertical="@dimen/_6sdp"
-                    android:layout_marginStart="@dimen/_8sdp"
-                    android:alpha="0.8"
-                    tools:src="@drawable/icon_cloth" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="@dimen/_36sdp"
+                    android:layout_height="@dimen/_36sdp">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/search_size_image"
+                        setUri="@{size.imageUri}"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintDimensionRatio="1"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/search_size_add_icon"
+                        setAddIcon="@{size.imageUri}"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:alpha="0.2"
+                        android:scaleX="0.5"
+                        android:scaleY="0.5"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintDimensionRatio="1"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:src="@drawable/icon_add_image" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="0dp"
@@ -50,7 +87,7 @@
                         android:layout_marginTop="-1dp"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:text="@{size.brand}"
+                        android:text="@{size.brand.trim()}"
                         android:textSize="@dimen/_7sdp"
                         tools:text="Anderson Bell" />
 
@@ -63,24 +100,10 @@
                         android:alpha="0.8"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:text="@{size.name}"
+                        android:text="@{size.name.trim()}"
                         android:textSize="@dimen/_11sdp"
                         tools:text="DAMAGED CREW NECK SWEATER" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
-
-                <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/search_size_check_box"
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginEnd="@dimen/_4sdp"
-                    android:alpha="0.8"
-                    android:buttonTint="?colorControlNormal"
-                    android:clickable="false"
-                    android:enabled="false"
-                    android:scaleX="0.7"
-                    android:scaleY="0.7"
-                    android:visibility="gone" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
     </FrameLayout>
